# breviabook

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
PRPs/: 000--phase-0-scaffold.md  001--phase-1-ir-epub-parser.md  002--phase-2-markdown-renderer.md  003--phase-3-chunker-checkpoint.md  004--phase-4-condenser.md  005--phase-5-synthesis-length-control.md  006--phase-6-image-selector-epub-renderer.md  007--phase-7-pdf-renderer.md  008--phase-8-pdf-parser.md  009--phase-9-more-providers.md  010--phase-10-translation-glossary.md  011--phase-11-vision-image-ranking.md  012--phase-12-polish.md  feat--block-class-styling-and-image-align.md  feat--block-fidelity.md  feat--br-and-language.md  feat--checkpoint-remaining-phases.md  feat--cli-tui.md  feat--concurrency.md  feat--condense-checkpoint-fingerprint.md  feat--cover-preservation.md  feat--inline-formatting.md  feat--internal-refs.md  feat--lists-quotes-condense.md  feat--ollama-retry.md  feat--refactor-condense-book.md  feat--ssrf-endpoint-guard.md  feat--translate-command.md  feat--usage-cost-reporting.md  feat--usage-protocol.md  mvp--cli-pipeline-wiring.md
PRPs/templates/: prp_base.md
brevia/: __init__.py  cli.py  pipeline.py
brevia/condense/: __init__.py  chunker.py  common.py  condenser.py  prompts.py  synthesizer.py
brevia/images/: selector.py  vision_ranker.py
brevia/ir/: __init__.py  models.py
brevia/llm/: base.py  factory.py  key_pool.py  pricing.py  rate_limit.py  usage.py
brevia/llm/providers/: __init__.py  gemini.py  litellm_base.py  ollama.py  openai.py  openrouter.py
brevia/parsers/: base.py  epub_parser.py  pdf_parser.py  toc_inference.py
brevia/persistence/: __init__.py  checkpoint.py
brevia/render/: base.py  epub_renderer.py  html.py  md_renderer.py  pdf_renderer.py
brevia/translate/: glossary.py  translator.py
brevia/ui/: __init__.py  banner.py  progress.py
brevia/utils/: jsonx.py  security.py  tokens.py
breviabook/: __init__.py  cli.py  config.py  pipeline.py
breviabook/condense/: chunker.py  common.py  condenser.py  prompts.py  synthesizer.py
breviabook/images/: __init__.py  selector.py  vision_ranker.py
breviabook/ir/: models.py
breviabook/llm/: __init__.py  base.py  factory.py  key_pool.py  rate_limit.py
breviabook/llm/providers/: gemini.py  litellm_base.py  ollama.py  openai.py  openrouter.py
breviabook/parsers/: __init__.py  base.py  epub_parser.py  pdf_parser.py  toc_inference.py
breviabook/persistence/: checkpoint.py  fingerprint.py
breviabook/render/: __init__.py  base.py  epub_renderer.py  html.py  md_renderer.py  pdf_renderer.py
breviabook/translate/: __init__.py  translator.py
breviabook/ui/: __init__.py  banner.py  progress.py
breviabook/utils/: __init__.py  htmlsan.py  jsonx.py  langcodes.py  security.py  tokens.py
docs/: ROADMAP.md  fidelity-qa-2026-07.md
tests/: conftest.py  test_block_class_and_image_align.py  test_block_presentation.py  test_br_and_language.py  test_checkpoint.py  test_chunker.py  test_cli.py  test_concurrency.py  test_condense_structure.py  test_condenser.py  test_cover_preservation.py  test_epub_parser.py  test_epub_renderer.py  test_fingerprint.py  test_glossary.py  test_htmlsan.py  test_image_selector.py  test_internal_refs.py  test_ir_models.py  test_key_pool.py  test_llm_factory.py  test_md_renderer.py  test_ollama.py  test_pdf_parser.py  test_pdf_renderer.py  test_pipeline.py  test_pricing.py  test_providers.py  test_rate_limit.py  test_security.py  test_synthesizer.py  test_toc_inference.py  test_tokens.py  test_translator.py  test_ui.py  test_usage.py  test_vision_ranker.py
tests/fixtures/: _build_sample_epub.py  _build_sample_pdf.py  sample.epub
